refactor: optimized claim, refer event end points.