@@ -8,52 +8,47 @@ import java.util.List;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+import com.EMS.Employee.Management.System.dto.ClaimDTO;
+import com.EMS.Employee.Management.System.entity.*;
+import com.EMS.Employee.Management.System.repo.*;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.multipart.MultipartFile;
 
 import com.EMS.Employee.Management.System.dto.ReferCandidateDTO;
-import com.EMS.Employee.Management.System.entity.ReferCandidateEntity;
-import com.EMS.Employee.Management.System.entity.ReferStatus;
-import com.EMS.Employee.Management.System.entity.User;
-import com.EMS.Employee.Management.System.entity.VacancyEntity;
-import com.EMS.Employee.Management.System.repo.EmployeeRepo;
-import com.EMS.Employee.Management.System.repo.ReferCandidateRepo;
-import com.EMS.Employee.Management.System.repo.UserRepo;
-import com.EMS.Employee.Management.System.repo.VacancyRepo;
 import com.EMS.Employee.Management.System.service.ReferCandidateService;
 
 @Service
 public class ReferCandidateServiceImpl implements ReferCandidateService {
     private final ReferCandidateRepo referCandidateRepo;
-    private final UserRepo userRepo;
     private final VacancyRepo vacancyRepo;
     private final EmployeeRepo employeeRepo;
+    private final DepartmentRepo departmentRepo;
 
-    public ReferCandidateServiceImpl(ReferCandidateRepo referCandidateRepo, UserRepo userRepo, VacancyRepo vacancyRepo,
-            EmployeeRepo employeeRepo) {
+    public ReferCandidateServiceImpl(ReferCandidateRepo referCandidateRepo,  EmployeeRepo employeeRepo, DepartmentRepo departmentRepo, VacancyRepo vacancyRepo) {
         this.referCandidateRepo = referCandidateRepo;
-        this.userRepo = userRepo;
         this.vacancyRepo = vacancyRepo;
         this.employeeRepo = employeeRepo;
+        this.departmentRepo = departmentRepo;
     }
 
     // Employee: Create referral
     @Override
     @Transactional
-    public ReferCandidateDTO createReferral(Long vacancyId, String applicantName, String applicantEmail, String message,
-            MultipartFile file, String status, String username) throws Exception {
-        User user = userRepo.findByUsername(username).orElseThrow(() -> new RuntimeException("User not found"));
+    public ReferCandidateDTO create(int employeeId,Long vacancyId, String applicantName, String applicantEmail, String message,
+            MultipartFile file) throws Exception {
+        EmployeeEntity employee = employeeRepo.findById(employeeId)
+                .orElseThrow(() -> new RuntimeException("Employee not found"));
         VacancyEntity vacancy = vacancyRepo.findById(vacancyId)
                 .orElseThrow(() -> new RuntimeException("Vacancy not found"));
 
         ReferCandidateEntity entity = new ReferCandidateEntity();
+        entity.setEmployee(employee);
         entity.setVacancy(vacancy);
         entity.setApplicantName(applicantName);
         entity.setApplicantEmail(applicantEmail);
         entity.setMessage(message);
-        entity.setStatus(status != null ? ReferStatus.valueOf(status) : ReferStatus.UNREAD);
-        entity.setUser(user);
+        entity.setStatus(ReferStatus.UNREAD);
 
         if (file != null && !file.isEmpty()) {
             String projectRoot = System.getProperty("user.dir");
@@ -71,70 +66,47 @@ public class ReferCandidateServiceImpl implements ReferCandidateService {
         return toDTO(saved);
     }
 
-    // Employee: View own referrals
     @Override
-    public List<ReferCandidateDTO> getOwnReferrals(String username) {
-        User user = userRepo.findByUsername(username).orElseThrow(() -> new RuntimeException("User not found"));
-        return referCandidateRepo.findByUser_Id(user.getId()).stream().map(this::toDTO).collect(Collectors.toList());
+    public List<ReferCandidateDTO> getRefersForAdmin(Long adminUserId) {
+        DepartmentEntity department = departmentRepo.findByAdmin_Id(adminUserId)
+                .stream().findFirst().orElse(null);
+        if (department == null)
+            return List.of();
+        return referCandidateRepo.findByEmployee_Department_Id(department.getId())
+                .stream().map(this::toDTO).toList();
     }
 
-    // Employee: Update own referral
     @Override
-    @Transactional
-    public ReferCandidateDTO updateOwnReferral(Long id, ReferCandidateDTO dto, String username) {
-        User user = userRepo.findByUsername(username).orElseThrow(() -> new RuntimeException("User not found"));
-        ReferCandidateEntity entity = referCandidateRepo.findById(id)
-                .orElseThrow(() -> new RuntimeException("Referral not found"));
-        if (!entity.getUser().getId().equals(user.getId())) {
-            throw new RuntimeException("Unauthorized");
-        }
-        if (dto.getApplicantName() != null)
-            entity.setApplicantName(dto.getApplicantName());
-        if (dto.getApplicantEmail() != null)
-            entity.setApplicantEmail(dto.getApplicantEmail());
-        if (dto.getMessage() != null)
-            entity.setMessage(dto.getMessage());
-        if (dto.getVacancyName() != null) {
-            VacancyEntity vacancy = vacancyRepo.findByName(dto.getVacancyName());
-            entity.setVacancy(vacancy);
-        }
-        ReferCandidateEntity saved = referCandidateRepo.save(entity);
-        return toDTO(saved);
-    }
-
-    // Employee: Delete own referral
-    @Override
-    @Transactional
-    public void deleteOwnReferral(Long id, String username) {
-        User user = userRepo.findByUsername(username).orElseThrow(() -> new RuntimeException("User not found"));
-        ReferCandidateEntity entity = referCandidateRepo.findById(id)
-                .orElseThrow(() -> new RuntimeException("Referral not found"));
-        if (!entity.getUser().getId().equals(user.getId())) {
-            throw new RuntimeException("Unauthorized");
-        }
-        referCandidateRepo.deleteById(id);
-    }
-
-    // Admin: View all referrals
-    @Override
-    public List<ReferCandidateDTO> getAllReferrals() {
+    public List<ReferCandidateDTO> getAllRefers() {
         return referCandidateRepo.findAll().stream().map(this::toDTO).collect(Collectors.toList());
     }
+    @Override
+    public List<ReferCandidateDTO> getByEmployeeId(int employeeId) {
+        return referCandidateRepo.findByEmployee_EmployeeId(employeeId).stream().map(this::toDTO).collect(Collectors.toList());
+    }
 
     @Override
     @Transactional
-    public ReferCandidateDTO updateReferralStatus(Long id, String status) {
-        ReferCandidateEntity entity = referCandidateRepo.findById(id)
-                .orElseThrow(() -> new RuntimeException("Referral not found"));
-        entity.setStatus(ReferStatus.valueOf(status));
-        ReferCandidateEntity saved = referCandidateRepo.save(entity);
+    public void deleteRefer(Long id) {
+        ReferCandidateEntity refer = referCandidateRepo.findById(id).orElseThrow(() -> new
+                RuntimeException("Refer not found"));
+        referCandidateRepo.delete(refer);
+    }
+
+    @Override
+    @Transactional
+    public ReferCandidateDTO updateStatus(Long id, String status) {
+        ReferCandidateEntity refer = referCandidateRepo.findById(id).orElseThrow(() -> new
+                RuntimeException("Refer not found"));
+        refer.setStatus(ReferStatus.valueOf(status));
+        ReferCandidateEntity saved = referCandidateRepo.save(refer);
         return toDTO(saved);
     }
 
     @Override
     @Transactional
-    public ReferCandidateDTO updateReferral(Long id, Long vacancyId, String applicantName, String applicantEmail,
-            String message, MultipartFile file, String status) throws Exception {
+    public ReferCandidateDTO updateRefer(Long id, Long vacancyId, String applicantName, String applicantEmail,
+            String message, MultipartFile file) throws Exception {
         ReferCandidateEntity entity = referCandidateRepo.findById(id)
                 .orElseThrow(() -> new RuntimeException("Referral not found"));
         if (vacancyId != null) {
@@ -148,8 +120,6 @@ public class ReferCandidateServiceImpl implements ReferCandidateService {
             entity.setApplicantEmail(applicantEmail);
         if (message != null)
             entity.setMessage(message);
-        if (status != null)
-            entity.setStatus(com.EMS.Employee.Management.System.entity.ReferStatus.valueOf(status));
         if (file != null && !file.isEmpty()) {
             String projectRoot = System.getProperty("user.dir");
             String uploadDir = projectRoot + java.io.File.separator + "uploads" + java.io.File.separator + "files"
@@ -164,28 +134,27 @@ public class ReferCandidateServiceImpl implements ReferCandidateService {
         return toDTO(saved);
     }
 
-    @Override
-    public List<ReferCandidateDTO> getReferralsByUserId(Long userId) {
-        return referCandidateRepo.findByUser_Id(userId).stream().map(this::toDTO).collect(Collectors.toList());
-    }
 
-    @Override
-    @Transactional
-    public void deleteReferral(Long id) {
-        referCandidateRepo.deleteById(id);
-    }
 
-    // Helper: Entity to DTO
     private ReferCandidateDTO toDTO(ReferCandidateEntity entity) {
         ReferCandidateDTO dto = new ReferCandidateDTO();
+        if (entity.getEmployee() != null) {
+            dto.setEmployeeId(entity.getEmployee().getEmployeeId());
+            dto.setDepartmentName(
+                    entity.getEmployee().getDepartment() != null ? entity.getEmployee().getDepartment().getName()
+                            : null);
+            dto.setEmployeeName(entity.getEmployee().getFirstName() != null ? entity.getEmployee().getFirstName() + " " + entity.getEmployee().getLastName() : null);
+        }
+        if (entity.getVacancy() != null){
+            dto.setVacancyName(entity.getVacancy().getName());
+        }
         dto.setId(entity.getId());
         dto.setVacancyName(entity.getVacancy() != null ? entity.getVacancy().getName() : null);
         dto.setApplicantName(entity.getApplicantName());
         dto.setApplicantEmail(entity.getApplicantEmail());
         dto.setMessage(entity.getMessage());
         dto.setFileUrl(entity.getFileUrl());
-        dto.setStatus(entity.getStatus() != null ? entity.getStatus().name() : null);
-        dto.setUserId(entity.getUser() != null ? entity.getUser().getId() : null);
+        dto.setStatus(entity.getStatus().name());
         
         return dto;
     }
